<resources>
    <string name="app_name">Programming CheatSheet</string>
    <string name="tab_title_one">Array</string>
    <string name="tab_title_two">Stack</string>
    <string name="tab_title_three">Queue</string>
    <string name="tab_title_four"> Single Linked List</string>
    <string name="tab_title_five">Double Linked List</string>
    <string name="tab_title_six">B Tree</string>
    <string name="tab_title_seven">BST</string>
    <string name="tab_title_eight">Hash Table</string>
    <string name="tab_title_nine">AVL tree</string>
    <string name="tab_title_ten">KD Tree</string>
    <string name="tab_title_eleven">Red Black Tree</string>

    <string name="access">Access</string>
    <string name="average_case">Average Case : </string>
    <string name="worst_case">  Worst   Case : </string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="insert">Insert</string>
    <string name="time_complexity">Time Complexity</string>
    <string name="setting">Settings</string>

    <string name="ds">Data Strucure</string>
    <string name="Git">Git</string>
    <string name="android">Android</string>
    <string name="algorithm">Algorithm</string>
    <string name="share">Share </string>
    <string name="about">About Us</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

</resources>
