<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_complexity"
        android:background="#9e9e9e"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="6dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/activity_horizontal_margin"
            android:text="@string/access"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="5sp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/average_case"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/avg_acess"/>

        </LinearLayout>

        <LinearLayout
             android:layout_width="match_parent"
             android:padding="5sp"
             android:layout_height="wrap_content">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:text="@string/worst_case"/>

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:id="@+id/worst_access"
             />
         </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="6sp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/activity_horizontal_margin"
            android:text="@string/search"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/average_case"/>
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/avg_search"
                android:textSize="16sp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="5sp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/worst_case"/>

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/worst_search"
                android:textSize="16sp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="6sp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/activity_horizontal_margin"
            android:text="@string/insert"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="5sp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/average_case"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/avg_insert"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="5sp"
            android:textSize="14sp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/worst_case"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/worst_insert"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="6sp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/activity_horizontal_margin"
            android:text="@string/delete"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/average_case"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/avg_delete"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="5sp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/worst_case"/>

            <TextView
                android:layout_width="wrap_content"
                android:textSize="16sp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:id="@+id/worst_delete"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>